# YandexAlgorithm4

./: .gitattributes  .gitignore  CMakeLists.txt
Final/: CMakeLists.txt
Final/A/: A.mhtml
Final/B/: B.mhtml  main.cpp
Final/C/: C.mhtml  main.cpp
Final/D/: D.mhtml
Final/E/: E.mhtml
Homework/: CMakeLists.txt
Homework/1/A/: A.mhtml  main.cpp
Homework/1/B/: B.mhtml  main.cpp
Homework/1/C/: C.mhtml  main.cpp
Homework/1/D/: D.mhtml  main.cpp
Homework/1/E/: E.mhtml  main.cpp
Homework/2/: CMakeLists.txt
Homework/2/A/: A.mhtml  main.cpp
Homework/2/B/: B.mhtml  main.cpp
Homework/2/C/: C.mhtml  main.cpp
Homework/2/D/: D.mhtml  main.cpp
Homework/2/E/: E.mhtml  main.cpp
Homework/3/: CMakeLists.txt
Homework/3/A/: A.mhtml  main.cpp
Homework/3/B/: B.mhtml  main.cpp
Homework/3/C/: C.mhtml  main.cpp
Homework/3/D/: D.mhtml  main.cpp
Homework/3/E/: E.mhtml  main.cpp
Homework/4/A/: A.mhtml  main.cpp
Homework/4/B/: B.mhtml  main.cpp
Homework/4/C/: C.mhtml  main.cpp
Homework/4/D/: D.mhtml  main.cpp
Homework/4/E/: E.mhtml  main.cpp
Training/A/: A.mhtml  main.cpp
Training/B/: B.mhtml  main.cpp
Training/C/: C.mhtml  main.cpp
Training/D/: D.mhtml  main.cpp
Training/E/: E.mhtml  main.cpp
Training/F/: F.mhtml  main.cpp
Training/G/: G.mhtml  main.cpp
Training/H/: H.mhtml  main.cpp
Training/I/: I.mhtml  main.cpp
Training/J/: J.mhtml  main.cpp
